--- a/scss/config/_index.scss
+++ b/scss/config/_index.scss
@@ -7,8 +7,7 @@ $default-config: (
   prefix: 'koi',
   base-font-size: 16,
   utilities: (
-    prefix: '',
-    glue: '\\:',
+    glue: ':',
   ),
   fallbacks: (
     colors: 6,
