--- a/scss/core/modules/_border.scss
+++ b/scss/core/modules/_border.scss
@@ -7,3 +7,7 @@
 @function radius($radius: config(fallbacks, radius)) {
   @return theme(radius, $radius);
 }
+
+@mixin radius($radius: config(fallbacks, radius)) {
+  border-radius: radius($radius);
+}
