--- a/scss/core/modules/_index.scss
+++ b/scss/core/modules/_index.scss
@@ -5,6 +5,7 @@
 @forward 'layer';
 @forward 'media-query';
 @forward 'shadow';
+@forward 'size';
 @forward 'spacing';
 @forward 'svg';
 @forward 'transition';
