--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -1,3 +1,5 @@
+/* stylelint-disable max-nesting-depth */
+/* stylelint-enable */
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -548,12 +550,12 @@ figure figcaption {
 }
 
 body {
-  color: #f1f5f9;
-  background-color: #0f172a;
-  padding: 2rem;
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   font-size: 1rem;
   line-height: 1.5rem;
+  color: #f1f5f9;
+  background-color: #0f172a;
+  padding: 1.5rem 1.5rem;
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
 
 h1 {
