--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -96,6 +96,88 @@ $gradients: (
   15: linear-gradient(90deg, #fad961 0%, #f76b1c 100%),
 );
 
+$sizes: (
+  0: rem(0),
+  1: rem(1),
+  2: rem(2),
+  4: rem(4),
+  6: rem(6),
+  8: rem(8),
+  10: rem(10),
+  12: rem(12),
+  14: rem(14),
+  16: rem(16),
+  20: rem(20),
+  24: rem(24),
+  28: rem(28),
+  32: rem(32),
+  36: rem(36),
+  40: rem(40),
+  44: rem(44),
+  48: rem(48),
+  56: rem(56),
+  64: rem(64),
+  80: rem(80),
+  96: rem(96),
+  112: rem(112),
+  128: rem(128),
+  144: rem(144),
+  160: rem(160),
+  176: rem(176),
+  192: rem(192),
+  208: rem(208),
+  224: rem(224),
+  256: rem(256),
+  288: rem(288),
+  320: rem(320),
+  384: rem(384),
+  448: rem(448),
+  512: rem(512),
+  576: rem(576),
+  640: rem(640),
+  768: rem(768),
+  896: rem(896),
+  1024: rem(1024),
+  1152: rem(1152),
+  1280: rem(1280),
+  1536: rem(1536),
+  '1/2': 50%,
+  '1/3': 33.333333%,
+  '2/3': 66.666667%,
+  '1/4': 25%,
+  '2/4': 50%,
+  '3/4': 75%,
+  '1/5': 20%,
+  '2/5': 40%,
+  '3/5': 60%,
+  '4/5': 80%,
+  '1/6': 16.666667%,
+  '2/6': 33.333333%,
+  '3/6': 50%,
+  '4/6': 66.666667%,
+  '5/6': 83.333333%,
+  '1/12': 8.333333%,
+  '2/12': 16.666667%,
+  '3/12': 25%,
+  '4/12': 33.333333%,
+  '5/12': 41.666667%,
+  '6/12': 50%,
+  '7/12': 58.333333%,
+  '8/12': 66.666667%,
+  '9/12': 75%,
+  '10/12': 83.333333%,
+  '11/12': 91.666667%,
+  quarter: 25%,
+  third: 33.333333%,
+  half: 50%,
+  full: 100%,
+  screen: 100vw,
+  min: min-content,
+  max: max-content,
+  fit: fit-content,
+  auto: auto,
+) !default;
+
 $spacing: (
   0: rem(0),
   1: rem(1),
@@ -408,6 +490,7 @@ $tokens: (
   screens: $screens,
   colors: $colors,
   gradients: $gradients,
+  sizes: $sizes,
   spacing: $spacing,
   font-family: $font-family,
   font-size: $font-size,
