--- a/scss/base/_animation.scss
+++ b/scss/base/_animation.scss
@@ -7,293 +7,23 @@
 $css-custom-property: --animation;
 
 // --------------------------------
-//   Mixins
-// --------------------------------
-
-@mixin keyframes {
-  /*! purgecss start ignore */
-  @keyframes fade-in {
-    to {
-      opacity: 1;
-    }
-  }
-
-  @keyframes fade-out {
-    to {
-      opacity: 0;
-    }
-  }
-
-  @keyframes scale-up {
-    to {
-      transform: scale(1.25);
-    }
-  }
-
-  @keyframes scale-down {
-    to {
-      transform: scale(0.75);
-    }
-  }
-
-  @keyframes slide-out-up {
-    to {
-      transform: translateY(-100%);
-    }
-  }
-
-  @keyframes slide-out-down {
-    to {
-      transform: translateY(100%);
-    }
-  }
-
-  @keyframes slide-out-right {
-    to {
-      transform: translateX(100%);
-    }
-  }
-
-  @keyframes slide-out-left {
-    to {
-      transform: translateX(-100%);
-    }
-  }
-
-  @keyframes slide-in-up {
-    from {
-      transform: translateY(100%);
-    }
-  }
-
-  @keyframes slide-in-down {
-    from {
-      transform: translateY(-100%);
-    }
-  }
-
-  @keyframes slide-in-right {
-    from {
-      transform: translateX(-100%);
-    }
-  }
-
-  @keyframes slide-in-left {
-    from {
-      transform: translateX(100%);
-    }
-  }
-
-  @keyframes shake-x {
-    0%,
-    100% {
-      transform: translateX(0%);
-    }
-
-    20% {
-      transform: translateX(-5%);
-    }
-
-    40% {
-      transform: translateX(5%);
-    }
-
-    60% {
-      transform: translateX(-5%);
-    }
-
-    80% {
-      transform: translateX(5%);
-    }
-  }
-
-  @keyframes shake-y {
-    0%,
-    100% {
-      transform: translateY(0%);
-    }
-
-    20% {
-      transform: translateY(-5%);
-    }
-
-    40% {
-      transform: translateY(5%);
-    }
-
-    60% {
-      transform: translateY(-5%);
-    }
-
-    80% {
-      transform: translateY(5%);
-    }
-  }
-
-  @keyframes spin {
-    from {
-      transform: rotate(0deg);
-    }
-
-    to {
-      transform: rotate(360deg);
-    }
-  }
-
-  @keyframes ping {
-    75%,
-    100% {
-      opacity: 0;
-      transform: scale(2);
-    }
-  }
-
-  @keyframes blink {
-    0%,
-    100% {
-      opacity: 1;
-    }
-
-    50% {
-      opacity: 0.5;
-    }
-  }
-
-  @keyframes float {
-    50% {
-      transform: translateY(-25%);
-    }
-  }
-
-  @keyframes bounce {
-    0%,
-    100% {
-      animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
-      transform: translateY(-25%);
-    }
-
-    50% {
-      animation-timing-function: cubic-bezier(0, 0, 0.2, 1);
-      transform: translateY(0);
-    }
-  }
-
-  @keyframes pulse {
-    0%,
-    100% {
-      opacity: 1;
-    }
-
-    50% {
-      opacity: 0.5;
-    }
-  }
-
-  @keyframes ring {
-    20% {
-      transform: rotate3d(0, 0, 1, 15deg);
-    }
-
-    40% {
-      transform: rotate3d(0, 0, 1, -10deg);
-    }
-
-    60% {
-      transform: rotate3d(0, 0, 1, 5deg);
-    }
-
-    80% {
-      transform: rotate3d(0, 0, 1, -5deg);
-    }
-
-    to {
-      transform: rotate3d(0, 0, 1, 0deg);
-    }
-  }
-  /*! purgecss end ignore */
-}
-
-/// Spin animation
-///
-/// @param {number} $duration
-///
-@mixin spin($duration: 1s, $iteration-count: infinite) {
-  @include animation($name: spin, $duration: $duration, $timing-function: linear, $iteration-count: $iteration-count);
-}
-
-/// Ping animation
-///
-/// @param {number} $duration
-///
-@mixin ping($duration: 1s, $iteration-count: infinite) {
-  @include animation(
-    $name: ping,
-    $duration: $duration,
-    $timing-function: theme(timing, ease-out),
-    $iteration-count: $iteration-count
-  );
-}
-
-/// Pulse animation
-///
-/// @param {number} $duration
-///
-@mixin pulse($duration: 2s, $iteration-count: infinite) {
-  @include animation(
-    $name: pulse,
-    $duration: $duration,
-    $timing-function: cubic-bezier(0.4, 0, 0.6, 1),
-    $iteration-count: $iteration-count
-  );
-}
-
-/// Bounce animation
-///
-/// @param {number} $duration
-///
-@mixin bounce($duration: 1s, $iteration-count: infinite) {
-  @include animation($name: bounce, $duration: $duration, $iteration-count: $iteration-count);
-}
-
-/// Fade-in animation
-///
-/// @param {number} $duration
-///
-@mixin fade-in($duration: theme(duration, slower)) {
-  @include animation($name: fade-in, $duration: $duration, $timing-function: theme(timing, ease-in));
-}
-
-/// Fade-out animation
-///
-/// @param {number} $duration
-///
-@mixin fade-out($duration: theme(duration, slower)) {
-  @include animation($name: fade-out, $duration: $duration, $timing-function: theme(timing, ease-in));
-}
-
-/// Ring animation
-///
-/// @param {number} $duration
-///
-@mixin ring($duration: theme(duration, slower)) {
-  @include animation($name: ring, $duration: $duration);
-  transform-origin: top center;
-}
-
-// --------------------------------
 //   Styles
 // --------------------------------
 
 @mixin styles {
-  @include keyframes();
+  :where(html) {
+    @include generate-keyframes;
+  }
 }
 
 // --------------------------------
 //   CSS Custom Properties
 // --------------------------------
 
+// TODO: generate the property using  helper so we can add prefix, etc
 @mixin vars {
   :where(html) {
-    --animation-fade-in: fade-in 0.5s var(--ease-3);
+    --animation-blink: blink 1s infinite;
+    --animation-bounce: bounce 1s infinite;
   }
 }
