--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -372,15 +372,63 @@ body {
   background-color: #fff;
 }
 
-:where(html) {
+:root {
   --koi-animation-blink: blink 1s infinite;
   --koi-animation-bounce: bounce 1s infinite;
 }
 
-:where(html) {
-  /*! purgecss start ignore */
-  /*! purgecss end ignore */
+:root {
+  --koi-duration-ultra-fast: 25ms;
+  --koi-duration-super-fast: 50ms;
+  --koi-duration-fastest: 75ms;
+  --koi-duration-faster: 100ms;
+  --koi-duration-fast: 150ms;
+  --koi-duration-normal: 200ms;
+  --koi-duration-slow: 300ms;
+  --koi-duration-slower: 500ms;
+  --koi-duration-slowest: 600ms;
+  --koi-duration-super-slow: 800ms;
+  --koi-duration-ultra-slow: 1200ms;
+  --koi-duration-1: 1s;
+  --koi-duration-2: 2s;
+  --koi-duration-3: 3s;
+  --koi-duration-4: 4s;
+  --koi-duration-5: 5s;
+  --koi-duration-25: 25ms;
+  --koi-duration-50: 50ms;
+  --koi-duration-75: 75ms;
+  --koi-duration-100: 100ms;
+  --koi-duration-150: 150ms;
+  --koi-duration-200: 200ms;
+  --koi-duration-300: 300ms;
+  --koi-duration-500: 500ms;
+  --koi-duration-700: 700ms;
+  --koi-duration-1000: 1000ms;
 }
+
+:root {
+  --koi-shadow-2xs: 0 0 0 1px rgba(0 0 0 / 0.05);
+  --koi-shadow-xs: 0 1px 2px 0 rgba(0 0 0 /0.05);
+  --koi-shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --koi-shadow-md: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
+  --koi-shadow-lg: 0 10px 15px -3px rgba(0 0 0 / 0.1), 0 4px 6px -2px rgba(0 0 0 / 0.05);
+  --koi-shadow-xl: 0 20px 25px -5px rgba(0 0 0 / 0.1), 0 10px 10px -5px rgba(0 0 0 / 0.04);
+  --koi-shadow-2xl: 0 25px 50px -12px rgba(0 0 0 / 0.25);
+  --koi-shadow-inner: inset 0 2px 4px 0 rgba(0 0 0 / 0.06);
+  --koi-shadow-outline: 0 0 0 3px rgba(66 153 225 / 0.5);
+  --koi-shadow-solid: 0 0 0 2px currentColor;
+  --koi-shadow-none: 0 0 #0000;
+}
+
+:root {
+  --koi-timing-linear: linear;
+  --koi-timing-ease: cubic-bezier(0.25, 0.1, 0.25, 1);
+  --koi-timing-ease-in: cubic-bezier(0.4, 0, 1, 1);
+  --koi-timing-ease-out: cubic-bezier(0, 0, 0.2, 1);
+  --koi-timing-ease-in-out: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+/*! purgecss start ignore */
 @keyframes blink {
   0%, 100% {
     opacity: 1;
@@ -389,6 +437,7 @@ body {
     opacity: 0.5;
   }
 }
+
 @keyframes bounce {
   0%, 100% {
     animation-timing-function: cubic-bezier(0.8, 0, 1, 1);
@@ -399,27 +448,32 @@ body {
     transform: translateY(0);
   }
 }
+
 @keyframes fade-in {
   to {
     opacity: 1;
   }
 }
+
 @keyframes fade-out {
   to {
     opacity: 0;
   }
 }
+
 @keyframes float {
   50% {
     transform: translateY(-25%);
   }
 }
+
 @keyframes ping {
   75%, 100% {
     opacity: 0;
     transform: scale(2);
   }
 }
+
 @keyframes pulse {
   0%, 100% {
     opacity: 1;
@@ -428,6 +482,7 @@ body {
     opacity: 0.5;
   }
 }
+
 @keyframes spin {
   from {
     transform: rotate(0deg);
@@ -436,6 +491,7 @@ body {
     transform: rotate(360deg);
   }
 }
+
 @keyframes ring {
   20% {
     transform: rotate3d(0, 0, 1, 15deg);
@@ -454,6 +510,7 @@ body {
   }
 }
 
+/*! purgecss end ignore */
 img {
   height: auto;
   user-select: none;
@@ -477,7 +534,7 @@ body {
   font-size: 1rem;
   line-height: 1.5rem;
   color: #f1f5f9;
-  background-color: #0f172a;
+  background-color: #64748b;
   padding: 1.5rem 1.5rem;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -495,6 +552,7 @@ a {
   padding: 2rem;
   border: 2px solid yellow;
   border-radius: 8px;
+  box-shadow: var(--koi-shadow-lg);
 }
 .wrapper:hover {
   border-color: #0cf;
@@ -519,7 +577,7 @@ a {
   background-color: #f1f5f9;
   border: 1px solid #e2e8f0;
   border-radius: 0.25rem;
-  box-shadow: 0 4px 6px -1px rgba(0, 0, 0, 0.1), 0 2px 4px -1px rgba(0, 0, 0, 0.06);
+  box-shadow: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
   color: #334155;
   display: inline-flex;
   font-weight: 500;
