--- a/scss/core/_generator.scss
+++ b/scss/core/_generator.scss
@@ -90,10 +90,13 @@
   @return '--#{$prefix}#{$property}-#{$key}';
 }
 
-@mixin generate-css-vars() {
-  :where(html) {
-    // TODO: Create a css-property function
-    --prefix-property: 69;
+// Generate CSS vars from map.
+@mixin generate-css-vars($property, $map: ()) {
+  :root {
+    @each $key, $value in $map {
+      $value: if(meta.type-of($value) == 'string', string.unquote($value), $value);
+      #{css-var-name($property, $key)}: $value;
+    }
   }
 }
 
@@ -101,14 +104,17 @@
 //   Keyframes
 // --------------------------------
 
+/* stylelint-disable max-nesting-depth */
 @mixin generate-keyframes() {
   /*! purgecss start ignore */
   @each $keyframe-key, $keyframe-value in theme(keyframes) {
-    @keyframes #{$keyframe-key} {
-      @each $keyframe-timestamp, $keyframe-property in $keyframe-value {
-        #{$keyframe-timestamp} {
-          @each $keyframe-transform-property, $keyframe-property-value in $keyframe-property {
-            #{$keyframe-transform-property}: #{$keyframe-property-value};
+    :root {
+      @keyframes #{$keyframe-key} {
+        @each $keyframe-timestamp, $keyframe-property in $keyframe-value {
+          #{$keyframe-timestamp} {
+            @each $keyframe-transform-property, $keyframe-property-value in $keyframe-property {
+              #{$keyframe-transform-property}: #{$keyframe-property-value};
+            }
           }
         }
       }
@@ -116,3 +122,4 @@
   }
   /*! purgecss end ignore */
 }
+/* stylelint-enable */
