--- a/scss/core/modules/_index.scss
+++ b/scss/core/modules/_index.scss
@@ -1,6 +1,7 @@
 @forward 'animation';
 @forward 'border';
 @forward 'color';
+@forward 'duration';
 @forward 'gradient';
 @forward 'layer';
 @forward 'media-query';
