--- a/scss/config/_tokens.scss
+++ b/scss/config/_tokens.scss
@@ -4,6 +4,7 @@
 
 @use 'sass:math';
 @use '../core/helpers/unit' as *;
+// @use '../core/generator' as *;
 
 $screens: (
   2xs: 240px,
@@ -397,7 +398,6 @@ $opacity: (
 );
 
 $shadow: (
-  2xs: '0 0 0 1px rgba(0 0 0 / 0.05)',
   xs: '0 1px 2px 0 rgba(0 0 0 /0.05)',
   sm: '0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1)',
   md: '0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06)',
