--- a/dev/assets/css/main.css
+++ b/dev/assets/css/main.css
@@ -1,5 +1,7 @@
 /* stylelint-disable max-nesting-depth */
 /* stylelint-enable */
+/* stylelint-disable max-nesting-depth */
+/* stylelint-enable */
 /*! modern-normalize v1.1.0 | MIT License | https://github.com/sindresorhus/modern-normalize */
 /*
 Document
@@ -407,7 +409,6 @@ body {
 }
 
 :root {
-  --koi-shadow-2xs: 0 0 0 1px rgba(0 0 0 / 0.05);
   --koi-shadow-xs: 0 1px 2px 0 rgba(0 0 0 /0.05);
   --koi-shadow-sm: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
   --koi-shadow-md: 0 4px 6px -1px rgba(0 0 0 / 0.1), 0 2px 4px -1px rgba(0 0 0 / 0.06);
@@ -533,8 +534,7 @@ figure figcaption {
 body {
   font-size: 1rem;
   line-height: 1.5rem;
-  color: #f1f5f9;
-  background-color: #64748b;
+  background-color: #f8fafc;
   padding: 1.5rem 1.5rem;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
 }
@@ -550,9 +550,10 @@ a {
 .wrapper {
   margin-top: 1.5rem;
   padding: 2rem;
-  border: 2px solid yellow;
+  background-color: #f1f5f9;
+  border: 2px solid #475569;
   border-radius: 8px;
-  box-shadow: var(--koi-shadow-lg);
+  box-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
 }
 .wrapper:hover {
   border-color: #0cf;
