--- a/dev/assets/scss/_base.scss
+++ b/dev/assets/scss/_base.scss
@@ -10,8 +10,8 @@
 
 body {
   @include koi.font-size();
-  color: koi.color(gray, 1);
-  background-color: koi.color(gray, 5);
+  // color: koi.color(gray, 1);
+  background-color: koi.color(gray, 0);
   padding: koi.spacing(24, 24);
   font-family: koi.font-family(sans);
 }
@@ -27,9 +27,12 @@ a {
 .wrapper {
   margin-top: koi.rem(24);
   padding: koi.theme(spacing, 32);
-  border: 2px solid koi.color(secondary);
+  background-color: koi.color(gray, 1);
+  border: 2px solid koi.color(gray);
   border-radius: 8px;
-  box-shadow: var(--koi-shadow-lg);
+  @include koi.shadow(sm);
+  // box-shadow: koi.shadow(md);
+  // box-shadow: var(--koi-shadow-md);
 
   &:hover {
     border-color: koi.color(primary);
